Benchmark/turtle/cpp-build/g_turtle.g4
grammar g_turtle;
start: instructions EOF;
instructions: instruction | instruction SPACE instructions;
instruction: MOVEMENT  NUMBER
           | 'c' SPACE COLOR (SPACE COLOR)?
           | 'fill' SPACE codeblock
           | 'repeat' SPACE NUMBER SPACE codeblock;
codeblock: '{' (instruction SPACE)+ '}';
MOVEMENT: 'f'|'b'|'l'|'r';
COLOR: ('A'..'Z') ('a'..'z')+;
NUMBER: '0'..'9';
SPACE: ' ';
